# GameEngine

./: CMakeLists.txt  README.md
compiler/: Compiler.vcxproj  Compiler.vcxproj.filters
compiler/src/api/: GameAPI.h
compiler/src/rules/: Rules.h
dependencies/: CMakeLists.txt
dependencies/freeimage/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glfw/lib/: glfw3.ilk  glfw3dll.exp  glfw3dll.lib
game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  main.cpp
game/src/resources/models/: cube.mtl  test.mtl
game/src/resources/shaders/: 3d.frag  3d.vert  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  test2d.frag  test2d.vert  test3d.frag  test3d.vert
game/x64/Debug/: Game.vcxprojResolveAssemblyReference.cache  vc120.idb
game/x64/Debug/Game.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
game/x64/Release/: Game.vcxprojResolveAssemblyReference.cache
game/x64/Release/Game.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
graphics/: CMakeLists.txt  Graphics.vcxproj  Graphics.vcxproj.filters
graphics/Release/graphics.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
graphics/src/: constants.h
pattern/: Pattern.vcxproj  Pattern.vcxproj.filters
pattern/lib/: patterns.lib
physics/: CMakeLists.txt  Physics.vcxproj  Physics.vcxproj.filters
physics/lib/: physics.lib
physics/src/: constants.h
test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  main.cpp
tools/: CMakeLists.txt  Tools.vcxproj  Tools.vcxproj.filters
tools/Debug/: vc120.idb
(+140 files in other folders)
